# offload_adam

./: .gitignore  README.md  pyproject.toml  setup.py
examples/e2e_train/: README.md  train.py
examples/multi_gpu/: README.md  train.py
examples/qat/: README.md  train.py
offload_adam/: offload_adam.py  offload_adam_v2.py
offload_adam/kernels/: __init__.py  fp31_master.py  stochastic_rounding.py
src/offload_adam/: __init__.py  _pretrained.py  adam.py  distributed_offload_adam.py  offload_adam.py  offload_adam_v2.py  pin_memory.py  pinned_alloc.py
src/offload_adam/kernels/: __init__.py  fp31_master.py  fp32_master.py  fp32_master_custom_rounding.py  stochastic_rounding.py
src/offload_adam/qweight/: __init__.py  apply.py  base.py  int4.py  int8.py  nf4.py  nvfp4.py
tests/: test_hf_config.py  test_int4.py  test_int8.py  test_nf4.py  test_nvfp4.py  test_qat_optimizer.py  test_state_dict_roundtrip.py
