[project]
name = "offload_adam"
version = "0.2.0"
description = "Adam optimizers that offload gradients and optimizer state to CPU memory."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "tascj", email = "tascj0@gmail.com" },
]
license = { file = "LICENSE" }
dependencies = [
    "torch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tascj/offload_adam"
Repository = "https://github.com/tascj/offload_adam"

[dependency-groups]
dev = [
    "numpy>=1.26",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
examples = [
    "accelerate",
    "liger-kernel",
    "transformers",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
